更新一些问题
1.添加车辆哪里还没进行测试
2.获取加油站的数据解析异常
3.Material design的使用没用上

--- a/app/src/main/res/layout/activity_input_barnd_page.xml
+++ b/app/src/main/res/layout/activity_input_barnd_page.xml
@@ -19,12 +19,13 @@
         app:et_supportMode="none" />
 
 
-    <com.rey.material.widget.Button
+    <Button
         android:id="@+id/input_add_brand_sumbit"
-        android:layout_width="0dp"
-        android:layout_height="36dp"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:textSize="20sp"
         android:text="下一步"
         android:layout_alignParentBottom="true"
-        android:background="@null" />
+         />
 
 </RelativeLayout>
