--- a/app/src/main/res/layout/activity_add_newcar_input.xml
+++ b/app/src/main/res/layout/activity_add_newcar_input.xml
@@ -71,6 +71,7 @@
                         <TextView
                             android:id="@+id/activity_add_newCar_brand_input"
                             style="@style/car_info_input_text"
+                            android:textColor="#000000"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:text="未知" />
@@ -93,6 +94,7 @@
                             android:id="@+id/activity_add_newCar_engineNumber_input"
                             style="@style/car_info_input_text"
                             android:layout_width="wrap_content"
+                            android:textColor="#000000"
                             android:layout_height="match_parent"
                             android:text="未知" />
                     </LinearLayout>
@@ -113,6 +115,7 @@
                         <TextView
                             android:id="@+id/activity_add_newCar_vin_input"
                             style="@style/car_info_input_text"
+                            android:textColor="#000000"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:text="未知" />
@@ -136,6 +139,7 @@
                             style="@style/car_info_input_text"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
+                            android:textColor="#000000"
                             android:text="未知" />
                     </LinearLayout>
 
@@ -459,7 +463,7 @@
                 android:gravity="center"
                 android:text="确认信息"
                 android:textSize="20sp"
-                android:textColor="@color/color_back"
+                android:textColor="@color/colorWhite"
                 android:layout_width="match_parent"
                 android:layout_height="50dp" />
         </LinearLayout>
