--- a/app/src/main/res/layout/activity_add_newcar.xml
+++ b/app/src/main/res/layout/activity_add_newcar.xml
@@ -55,7 +55,7 @@
     <Button
         android:id="@+id/addCar_sercheCarInfo_photoBtn"
         style="@style/MissButton"
-        android:layout_width="120dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="相册"
         android:textStyle="bold" />
