--- a/app/src/main/res/layout/item_carInfo_list.xml
+++ b/app/src/main/res/layout/item_carInfo_list.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="160dp"
     android:gravity="center"
+    android:background="@color/color_backgroud_gui"
     android:orientation="horizontal">
 
         <LinearLayout
@@ -15,7 +16,7 @@
             android:layout_marginRight="10dp"
             android:layout_marginTop="5dp"
             android:padding="5dp"
-            android:background="@drawable/corners_blue_background"
+            android:background="@drawable/card_view_white_item"
             android:orientation="horizontal">
 
                 <ImageView
@@ -27,27 +28,54 @@
                     android:gravity="center|left"
                     android:src="@mipmap/user_head" />
 
-                <TextView
-                    android:id="@+id/car_list_item_id"
+                <LinearLayout
+                    android:orientation="vertical"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:paddingTop="35dp"
-                    android:layout_marginLeft="5dp"
-                    android:gravity="center_vertical|left|top"
-                    android:text="车牌"
-                    android:textColor="@color/color_gui"
-                    android:textSize="20sp" />
-
-                <TextView
-                    android:id="@+id/car_list_item_carbrand_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:gravity="center|left"
-                    android:paddingLeft="10dp"
-                    android:text="B1234567"
-                    android:textSize="21sp"
-                    android:textColor="@color/color_gui"
-                    android:textStyle="bold" />
+                    android:layout_marginTop="20dp"
+                    android:layout_height="match_parent">
+
+                        <TextView
+                            android:id="@+id/car_list_item_carbarnd"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="5dp"
+                            android:gravity="center_vertical|left|bottom"
+                            android:text="车牌  "
+                            android:textStyle="bold"
+                            android:textColor="#000000"
+                            android:textSize="16sp" />
+
+                        <TextView
+                            android:id="@+id/car_list_item_carOil_text"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center|left"
+                            android:layout_marginTop="10dp"
+                            android:paddingLeft="10dp"
+                            android:text="油量  "
+                            android:textSize="12sp"
+                            android:textColor="#000000"
+                            />
+                        <TextView
+                            android:id="@+id/car_list_item_carMalied_text"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center|left"
+                            android:paddingLeft="10dp"
+                            android:layout_marginTop="10dp"
+                            android:text="里程数  "
+                            android:textSize="12sp"
+                            android:textColor="#000000"
+                            android:textStyle="bold" />
+                </LinearLayout>
+
+                <View
+                    android:id="@+id/car_list_item_car_isSelect"
+                    android:background="@mipmap/ic_car_select_icon"
+                    android:visibility="gone"
+                    android:layout_width="40dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_height="40dp"/>
         </LinearLayout>
 </LinearLayout>
