--- a/app/src/main/res/layout/item_gasstionlist.xml
+++ b/app/src/main/res/layout/item_gasstionlist.xml
@@ -28,6 +28,9 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="3"
+            android:ellipsize="none"
+            android:minLines="2"
+            android:maxLines="50"
             android:singleLine="true"
             android:text="未知"
             android:textColor="@color/color_back_gui"
