--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
                 android:id="@+id/content_frame"
                 android:layout_marginTop="55dp"
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
+                android:layout_height="match_parent"
                 android:background="@color/colorMianTheme"
                 android:orientation="vertical"/>
 
