--- a/app/src/main/res/layout/fragment_car_list_action.xml
+++ b/app/src/main/res/layout/fragment_car_list_action.xml
@@ -17,8 +17,20 @@
         circleprogress:color3="@android:color/holo_blue_light"
         android:layout_height="fill_parent" />
 
+    <TextView
+        android:id="@+id/car_list_title"
+        android:background="@color/color_carView_mainMesage"
+        android:textSize="16sp"
+        android:padding="8dp"
+        android:gravity="center"
+        android:textColor="@color/colorWhite"
+        android:text="我的车辆"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <ListView
         android:id="@+id/carlist_myCar_ListView"
+        android:layout_below="@+id/car_list_title"
         android:layout_marginTop="15dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
