--- a/app/src/main/res/layout/fragment_sumbit_indent.xml
+++ b/app/src/main/res/layout/fragment_sumbit_indent.xml
@@ -28,7 +28,6 @@
                     android:layout_weight="5"
                     android:orientation="vertical"
                     android:padding="10dp"
-
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent">
 
@@ -42,7 +41,7 @@
                         android:layout_height="wrap_content" />
 
                     <LinearLayout
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_weight="2"
                         android:orientation="horizontal"
                         android:layout_height="wrap_content">
@@ -59,10 +58,12 @@
                         <TextView
                             android:id="@+id/sumbit_gastation_stationType"
                             android:gravity="center"
-                            android:layout_weight="4"
+                            android:layout_weight="2"
                             android:text="中石油加油站"
                             android:textSize="14sp"
-                            android:layout_width="wrap_content"
+                            android:layout_marginLeft="20dp"
+                            android:background="@drawable/sumbit_gastype_brod"
+                            android:layout_width="100dp"
                             android:layout_height="match_parent" />
                     </LinearLayout>
 
@@ -72,7 +73,7 @@
                 <View
                     android:layout_marginBottom="50dp"
                     android:layout_marginTop="50dp"
-                    android:background="@color/color_back_gui"
+                    android:background="@color/colorWhite"
                     android:layout_width="1dp"
                     android:layout_height="match_parent"/>
 
@@ -81,7 +82,7 @@
                 <LinearLayout
                     android:id="@+id/sumbit_gastation_goNaiv"
                     android:orientation="vertical"
-                    android:layout_weight="2"
+                    android:layout_weight="3"
                     android:layout_marginTop="20dp"
                     android:layout_marginBottom="10dp"
                     android:layout_width="wrap_content"
@@ -217,6 +218,7 @@
                             android:id="@+id/sumbitIndent_iloNumber_editInput"
                             android:gravity="center|bottom|left"
                             android:background="@null"
+                            android:textColor="#000000"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content" />
                     </LinearLayout>
@@ -249,6 +251,7 @@
                             android:id="@+id/sumbitIndent_price_editInput"
                             android:layout_width="match_parent"
                             android:gravity="center|bottom|left"
+                            android:textColor="#000000"
                             android:background="@null"
                             android:layout_height="wrap_content" />
 
