--- a/app/src/main/res/layout/item_carInfo_list.xml
+++ b/app/src/main/res/layout/item_carInfo_list.xml
@@ -21,8 +21,8 @@
 
                 <ImageView
                     android:id="@+id/car_list_item_carImage"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="120dp"
+                    android:layout_height="match_parent"
                     android:layout_marginBottom="5dp"
                     android:layout_marginTop="5dp"
                     android:gravity="center|left"
