--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -132,7 +132,7 @@
     </style>
     <!--加载数据的颜色不一样-->
     <style name="car_info_input_text" >
-        <item name="android:textColor">@color/color_gui</item>
+        <item name="android:textColor">@color/color_back</item>
         <item name="android:textSize">14sp</item>
         <item name="android:gravity">center|left</item>
     </style>
