--- a/app/src/main/res/layout/item_gasstionlist.xml
+++ b/app/src/main/res/layout/item_gasstionlist.xml
@@ -23,33 +23,23 @@
         android:orientation="horizontal"
         android:paddingLeft="15dp">
 
-        <TableLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:stretchColumns="1"
-            android:shrinkColumns="1">
-
             <TextView
                 android:id="@+id/gasSattion_Item_stationAddress"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:layout_marginLeft="8dp"
                 android:layout_weight="3"
                 android:ellipsize="none"
                 android:minLines="2"
                 android:maxLines="50"
-                android:singleLine="true"
+                android:singleLine="false"
                 android:text="未知"
-                android:textColor="@color/color_back_gui"
+                android:textColor="@color/color_gui"
                 android:textSize="14sp" />
-        </TableLayout>
-
-
-
         <TextView
             android:id="@+id/gasSattion_Item_diatance"
-            android:layout_width="50dp"
+            android:layout_width="60dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
             android:gravity="center"
             android:singleLine="true"
             android:text="km"
@@ -72,7 +62,7 @@
             android:layout_weight="1"
             android:drawableLeft="@mipmap/ic_location_big_gui_icon"
             android:gravity="center|left"
-            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
             android:text="到这里"
             android:textColor="@color/color_back"
             android:textSize="16sp" />
