--- a/app/src/main/res/layout/item_gasstionlist.xml
+++ b/app/src/main/res/layout/item_gasstionlist.xml
@@ -34,7 +34,7 @@
                 android:maxLines="50"
                 android:singleLine="false"
                 android:text="未知"
-                android:textColor="@color/color_gui"
+                android:textColor="@color/color_b"
                 android:textSize="14sp" />
         <TextView
             android:id="@+id/gasSattion_Item_diatance"
@@ -55,17 +55,25 @@
         android:layout_height="30dp"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/gasSattion_Item_toNavi"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+        <!--导航到这里-->
+        <LinearLayout
             android:layout_weight="1"
-            android:drawableLeft="@mipmap/ic_location_big_gui_icon"
-            android:gravity="center|left"
-            android:paddingRight="20dp"
-            android:text="到这里"
-            android:textColor="@color/color_back"
-            android:textSize="16sp" />
+            android:gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/gasSattion_Item_toNavi"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:drawableLeft="@mipmap/ic_location_blue_ic"
+                android:gravity="center"
+                android:text="到这里"
+                android:textColor="@color/color_back"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+
 
         <View
             android:layout_width="1dp"
@@ -73,17 +81,24 @@
             android:background="@color/colorBackFont"
             android:paddingBottom="15dp"
             android:paddingTop="15dp" />
-
-        <TextView
-            android:id="@+id/gasSattion_Item_callPhone"
+        <!--导航到这里-->
+        <LinearLayout
+            android:layout_weight="1"
+            android:gravity="center"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1.5"
-            android:drawableLeft="@mipmap/ic_call_phone_gui_icon"
-            android:gravity="center|left"
-            android:paddingLeft="20dp"
-            android:text="电话"
-            android:textColor="@color/color_back"
-            android:textSize="16sp" />
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/gasSattion_Item_callPhone"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:drawableLeft="@mipmap/ic_call_phone_bule_ic"
+                android:gravity="center"
+                android:text="电话"
+                android:textColor="@color/color_back"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+
     </LinearLayout>
 </LinearLayout>
