--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -2,15 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="30dp"
-    android:layout_marginTop="20dp"
-    android:padding="20dp"
+
     android:background="@color/colorWhite"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="20dp"
         android:layout_marginBottom="10dp"
         android:orientation="horizontal">
 
@@ -35,6 +36,8 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
+       android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:layout_marginTop="4dp"
         android:layout_marginBottom="4dp"
         android:background="#eeeeee" />
@@ -43,6 +46,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="horizontal"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="20dp"
         android:layout_height="wrap_content">
 
         <LinearLayout
