--- a/app/src/main/res/drawable-xxxhdpi/sumbit_text_nobord.xml
+++ b/app/src/main/res/drawable-xxxhdpi/sumbit_text_nobord.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid android:color="#ffffff" />
-    <stroke android:width="1dip" android:color="#eeeeee"/>
+    <stroke android:width="1dip" android:color="#bbbbbb"/>
 </shape>
