--- a/app/src/main/res/layout/activity_add_newcar.xml
+++ b/app/src/main/res/layout/activity_add_newcar.xml
@@ -54,10 +54,12 @@
 
     <Button
         android:id="@+id/addCar_sercheCarInfo_photoBtn"
-        style="@style/MissButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="相册"
+        android:background="@color/color_carView_mainMesage"
+        android:textColor="@color/colorWhite"
+        android:textSize="16sp"
         android:textStyle="bold" />
 </LinearLayout>
 
