--- a/app/src/main/res/layout/fragment_title.xml
+++ b/app/src/main/res/layout/fragment_title.xml
@@ -6,15 +6,22 @@
     android:paddingLeft="10dp"
     android:background="@color/color_toolbar_background"
     android:layout_height="45dp">
-    <TextView
+
+    <LinearLayout
         android:id="@+id/activity_title_back"
-        android:onClick="onFinish"
-        android:padding="5dp"
-        android:layout_margin="5dp"
-        android:background="@mipmap/ic_go_left_white_icon"
-        android:layout_width="26dp"
-        android:layout_marginLeft="10dp"
-        android:layout_height="23dp" />
+        android:gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent">
+        <TextView
+            android:onClick="onFinish"
+            android:padding="5dp"
+            android:layout_margin="5dp"
+            android:background="@mipmap/ic_go_left_white_icon"
+            android:layout_width="26dp"
+            android:layout_marginLeft="10dp"
+            android:layout_height="23dp" />
+    </LinearLayout>
+
 
     <TextView
         android:id="@+id/activity_title"
