--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -56,7 +56,7 @@
                 android:text="消息"
                 android:textSize="14sp"
                 style="@style/MissTextViweStyle"
-                android:gravity="center"
+                android:gravity="center|left"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
